--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
 - VERSION=2.3.3 && zip -j neo4j-shell-tools_$VERSION.zip target/import-tools-${VERSION}*.jar
   target/dependency/opencsv-*.jar target/dependency/geoff-*.jar target/dependency/mapdb-*.jar
   target/dependency/target/reflectasm-*.jar target/dependency/kryo-*.jar target/dependency/minlog-*.jar
-  target/dependency/objenesis-*.jar target/dependency/reflectasm-*.jar
+  target/dependency/objenesis-*.jar target/dependency/reflectasm-*.jar target/dependency/asm-*.jar
 deploy:
   skip_cleanup: true
   provider: releases
